# battle_in_CLI

./: Cargo.toml  battle_in_CLI
assets/data/: enemy_data.toml  equipment.toml  equipment_data.toml  fellow_data.toml  item_data.toml  spell_data.toml
assets/data/dungeon/: dungeon0_data.toml
assets/data/equipment/: armor.toml  sword_data.toml
src/: main.rs
src/character/: enemy.rs  fellow.rs  item.rs  mod.rs  spell.rs
src/system/: battle_process.rs  damage.rs  mod.rs  order_of_action.rs  toml.rs
