[package]
name = "battle_in_CLI"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
dyn-clone = { version = "1.0.19" }
toml = "0.8.20"
serde = { version = "1.0.104", features = ["derive"] }
rand = "0.9.0"
proconio = "0.5.0"
crossterm = "0.28.1"
